...
            "state": "translated",
            "value": "سيُضاف إلى آخر مجموعة."
          }
        }
      }
    },
    "いまは受け付けられません": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "いまは受け付けられません"
          }
...
            "state": "translated",
            "value": "غير متاح حاليًا"
          }
        }
      }
    },
    "このアプリが気に入ったら": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "このアプリが気に入ったら"
          }
...
            "state": "translated",
            "value": "إيقاف القراءة"
          }
        }
      }
    },
    "購入できませんでした": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "購入できませんでした"
          }
...
